fixing text-align for the last section

--- a/css/indexPageStylesheet.css
+++ b/css/indexPageStylesheet.css
@@ -158,3 +158,7 @@ li {
 .other-activities h3 {
     margin: 3% 0;
 }
+
+.fun p {
+    text-align: center;
+}
